--- a/EP 3.1 (Com ArrayList-HashMap)/nbproject/private/private.properties
+++ b/EP 3.1 (Com ArrayList-HashMap)/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\11513928\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=/home/douglasjtds/.netbeans/8.1/build.properties
